--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,11 @@
     padding: 0;
 }
 .fundo{
-    background-image: linear-gradient(45deg, rgb(81, 255, 0), rgb(255, 0, 140) );
+    background-image: linear-gradient(45deg, rgb(101, 253, 0), rgb(255, 0, 0));
     height: 100vh;
-    font-family:cursive;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
 }
 h1{font-size: 70px;}
 p{font-size: 50px;}
@@ -14,4 +16,30 @@ p{font-size: 50px;}
 .Calculadora{
     position: absolute;
     background-color: rgba(rgb(0, 68, 255),0.7);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    padding: 15px;
+    font-size: 20px;
+
+}
+.botao{
+    width: 50px;
+    height: 50px;
+    margin: 3px;
+    font-size: 25px;
+    cursor: pointer;
+background-color: rgb(0, 47, 255);
+border: none;
+color: rgb(255, 0, 200);
+}
+.botao:hover{
+    background-color: chocolate;
+    color: greenyellow;
+}
+
+#resultado{
+    background-color: pink;
+
 }
